Added logo and menu in header

--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,12 @@ div, section, footer, header {
 .m-col-5 {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
+
+.m-1-2 {
+    grid-template-columns: 1fr 2fr;
+}
+
+
 .span-full {
     grid-column-start: 1;
     grid-column-end: -1;
